fixed footer spacing on page

--- a/css/style-about.css
+++ b/css/style-about.css
@@ -3,12 +3,13 @@ body {
   margin: 10px auto;
   max-width: 900px;
   font-family: 'Lato', sans-serif;
+  height: 100vh;
 }
 
 header {
   border-bottom: gray 1px solid;
   width: 100%;
-  height: 50px;
+  height: 10%;
 }
 
 nav {
