--- a/css/style-flip.css
+++ b/css/style-flip.css
@@ -4,13 +4,18 @@ body {
   margin: 10px auto;
   max-width: 900px;
   font-family: 'Lato', sans-serif;
+  height: 100vh;
+}
+
+main {
+  height: 80%;
 }
 
 /* navbar styling */
 header {
   border-bottom: gray 1px solid;
   width: 100%;
-  height: 50px;
+  height: 10%;
 }
 
 nav {
@@ -254,8 +259,9 @@ footer {
   justify-content: space-between;
   border-top: gray 1px solid;
   color: #f6f7fb;
-  height: 160px;
+  /* height: 160px; */
   margin-top: 5rem;
+  height: 20%;
 }
 
 .footer-nav {
