--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,17 @@ body {
   margin: 10px auto;
   max-width: 900px;
   font-family: 'Lato';
+  height: 100vh;
+}
+
+main{
+  height: 80%;
 }
 
 header {
   border-bottom: gray 1px solid;
   width: 100%;
-  height: 50px;
+  height: 10%;
 }
 
 nav {
